--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   امیدوارم از متالب این سایت خوشتون بیاد.
   برای دریافت اطلاعاتی در رابطه با سایت شما می توانید وارد بخش About شده
   و از این سایت یک سری اطلاعات بدست آورید.
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "/mr-fox-h" # the subpath of your site, e.g. /blog
 url: "https://mr-fox-h.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 aparat_username: Aparat
 gitlab_username: Gitlab
