--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ title: Mr.Fox
 email: mr.fox@iran.ir
 description: >- # this means to ignore newlines until "baseurl:"
   سلام دوستان
-  امیدوارم از متالب این سایت خوشتون بیاد.
+  امیدوارم از مطالب این سایت خوشتون بیاد.
   برای دریافت اطلاعاتی در رابطه با سایت شما می توانید وارد بخش About شده
   و از این سایت یک سری اطلاعات بدست آورید.
 baseurl: "" # the subpath of your site, e.g. /blog
